Closed
Bug 248226
Opened 21 years ago
Closed 21 years ago
don't count mouse enter/exit as user events for pageload perf hack
Categories
(Core :: Layout, defect, P2)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha2
People
(Reporter: dbaron, Assigned: dbaron)
Details
(Whiteboard: [patch])
Attachments
(1 file)
|
1.54 KB,
patch
|
bryner
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
I think we shouldn't count mouse enter and exit events as user events for the
pageload performance hack in nsViewManager. (This code doesn't affect Windows
and OS/2.) This could make Linux pageload test results more stable. We
shouldn't count them because we get exit and enter events when widgets are
created and destroyed -- so we get them right after the initial reflow.
(I had this idea after landing a patch for the pageload perf regression from bug
20022.)
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #151491 -
Flags: superreview?(bryner)
Attachment #151491 -
Flags: review?(bryner)
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [patch]
Target Milestone: --- → mozilla1.8alpha2
Updated•21 years ago
|
Attachment #151491 -
Flags: superreview?(bryner)
Attachment #151491 -
Flags: superreview+
Attachment #151491 -
Flags: review?(bryner)
Attachment #151491 -
Flags: review+
| Assignee | ||
Comment 2•21 years ago
|
||
Fix checked in to trunk, 2004-06-23 10:31 -0700. Didn't help btek much, but may
have helped gruff (hard to know, since it was only restarted afterwards).
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•