Don't treat mouse exit and enter events as user events for purposes of content sink frequency tuning, since they're often caused by widget creation/destruction, and if the user moves the mouse we'll get real mousemove events.  I'm hoping this will smooth pageload times.  b=248226  r+sr=bryner